# PubMed-Pharma-Research-Tool

./: .gitignore  README.md  Set-PoetryCachePath.ps1  bio.csv  bio.json  pyproject.toml  set-envs.ps1  set-envs.sh
src/pubmed_papers/: main.py  utils.py
src/pubmed_papers/pipe/: LLMmatch.py  classify.py  controller.py  keymatch.py  pupmed.py
tests/: main_test.py
